gramdictru/wwwroot/css/site.css
body {
    font-family: serif;
    line-height: 140%;
    text-align: center;
    background-image: url(../background.jpeg);
}

.page {
    text-align: center;
    max-width: 75em;
    display: inline-block;
    background-image: url(../page.jpg);
    margin-top: 50px;
}

.body-content {
    color: #2d0016;
    padding-top: 25px;
    padding-left: 5px;
    padding-right: 5px;
    max-width: 50em;
    text-align: justify;
    display: inline-block;
    overflow-x: visible;
}

a {
    color: #303e00;
    text-decoration: none;
}

a:visited {
    color: #858e4e;
}

a:hover {
    text-decoration: underline;
}

@media (max-width: 500px) {
    img#cover {
        display: block;
        margin: 0 auto;
        padding-bottom: 1em;
    }
}

@media (min-width: 501px) {
    img#cover {
        float: left;
        margin-right: 1.5em;
        margin-bottom: 2em;
    }
}

.abstract {
    line-height: 120%;
}

.nowrap {
    white-space: nowrap;
}

h1 {
    line-height: 130%;
}

h1, h2, h3, h4, h5, h6 {
    text-align: center;
}

table.left-aligned tr td, 
table.noborder tr td,
table.noborder tr th {
    border-style: none;
}

table tr th,
table tr td {
    text-align: center;
    border-style: solid;
    border-width: 1.5px;
    border-color: black;
}

table tr td {
    text-indent: 0;
    padding-left: 0.25em;
    padding-right: 0.25em;
}

table tr th {
    padding: 0.5em;
}

table {
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 1em;
    border-collapse: collapse;
}

em {
    letter-spacing: 0.3em;
    font-style: normal;
}

p {
    text-align: justify;
    margin-top: 0;
    margin-bottom: 0;
    padding-top: 0;
    padding-bottom: 0;
    text-indent: 2em;
}

code, word-end {
    font-family: Times;
    font-style: italic;
}

word-end {
    white-space: nowrap;
}

code em {
    font-style: italic;
}

#contents-link {
    text-align: center;
    margin-top: 1em;
    margin-bottom: 2em;
}

#author {
    text-align: center;
    font-weight: bold;
    font-size: 140%;
    padding-top: 3em;
    font-style: italic;
}

hr {
    width: 10%;
    margin-top: 1em;
    margin-bottom: 1em;
}

h1 {
    -webkit-margin-before: 0.3em;
}

.boxed-cross:before
{
    content: "⌧"
}
.cross:before
{
    content: "✕"
}

table.left-aligned tr td {
    text-align: left;
    vertical-align: top;
}

table.left-aligned {
    margin-left: 2em;
    margin-top: 0.4em;
    margin-bottom: 0.4em;
}

table.left-aligned tr td:nth-child(1) {
    padding-left: 0;
    font-weight: bold;
    min-width: 6em;
}

table.left-aligned tr td:nth-last-child(1) {
    padding-right: 0;
}

.letter {
    font-weight: bold;
}

.signature {
    text-align: right;
    margin-right: 20%;
    margin-top: 2em;
    margin-bottom: 2em;
    font-style: italic;
}

ul#contents {
    text-align: left;
}

@media (max-width: 500px) {
    ul#contents {
        padding-left: 1.2em;
    }

    ul#contents ul {
        padding-left: 1.2em;
    }
}

.footnote {
    font-size: smaller;
}

.entry {
    margin-left: 4em;
    text-indent: 0;
}

.row .column {
    float: left;
    width: 50%;
    height: auto; 
}

.row:after {
    content: "";
    display: table;
    clear: both;
}

.tr1 {
    border-right: solid 1px #000000;
    border-collapse: collapse;
}

@media screen and (max-width: 600px) {
    .column {
        width: 100%;
    }
    .tr1 {
        border-right: solid 0px #000000 !important;
    }
}

.column1 {
    float: left;
    width: 100%;
    height: auto;
}

.row .column table tr td {
    text-align: left !important;
    padding-right: 15px !important; 
}

.row .column table {
    border-collapse: collapse;
    text-align: left;
}

.drob {
    vertical-align: middle;
    display: inline-block;
}

.drob div:first-child {
    border-bottom: solid 1px; 
}

.drob div {
    text-align: center;
}

.big-slash {
    vertical-align: middle;
    display: table-cell;
    font-size: 200%
}

.column table td {
    border: none;
}

table .left-aligned td {
    border: none;
}

#search-react-root {
    margin: -8px -8px 0 -8px;
}

#search-react-root > .page {
    margin-left: 8px;
    margin-right: 8px;
}

.search-bar {
    background-color: blue;
    padding: 0.5rem 0;
    font-size: larger;
    font-weight: bold;
    margin-bottom: 8px;
    position: fixed;
    width: 100%;
}

.centerer {
    display: inline-block;
    text-align: left;
}

.contents-link { color: white; }

.results-table {
    width: 100%;
    column-count: 6;
    column-width: 350px;
}

.result-entry {
    display: flex;
}

.lemma {
    width: 45%;
    word-break: break-all;
    text-align: right;
    display: flex;
    align-self: center;
    flex-direction: column;
}

.symbol {
    width: 25%;
    text-align: center;
    display: flex;
    align-self: center;
    flex-direction: column;
}

.grammar {
    width: 30%;
    text-align: left;
    word-break: break-all;
    display: flex;
    align-self: center;
    flex-direction: column;
}

